Fixed spacing between client logos.

--- a/app/stylesheets/_shared.sass
+++ b/app/stylesheets/_shared.sass
@@ -276,7 +276,7 @@ section#the_finch
     div.inner_body
       div#the_clients
         div.row
-          width: 940px
+          width: 930px
           height: 82px
           margin: 0px auto
           
@@ -285,22 +285,11 @@ section#the_finch
             display: block
             width: 290px
             height: 82px
+            padding: 0px 10px
             
             img
               max-width: 290px
               max-height: 82px
-            
-            img:first-child
-              margin-right: 15px
-            
-            img:last-child
-              margin-left: 15px
-              
-          a:first-child
-            margin-right: 20px
-            
-          a:last-child
-            margin-right: 20px
             
         div.row:first-child
           margin-bottom: 14px
